# csad2425ki404mohmp12

./: CMakeLists.txt  Doxyfile  README.md  Task1_Moh_Marian_KI404.docx
.github/workflows/: ci.yaml
client/: CMakeLists.txt  Game.cpp  Game.h  Main.cpp  SerialPort.cpp  SerialPort.h  client.sln  client.vcxproj  client.vcxproj.filters  game.ini
client/include/: SerialPort.h  game.h
client/src/: SerialPort.cpp  game.cpp  main.cpp
client/tests/: test_game.cpp  test_serial.cpp
client/x64/Debug/: client.exe.recipe  client.ilk  client.vcxproj.FileListAbsolute.txt  vc143.idb
client/x64/Debug/client.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  client.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
config/: game.ini
docs/: Doxyfile
docs/html/: _game_8cpp.html  _game_8h.html  _game_8h_source.html  _main_8cpp.html  _serial_port_8cpp.html  _serial_port_8h.html  _serial_port_8h_source.html  annotated.html  annotated_dup.js  class_serial_port-members.html  class_serial_port.html  class_serial_port.js  classes.html  dir_41e1742e44e2de38b3bc91f993fed282.html  dir_41e1742e44e2de38b3bc91f993fed282.js  dir_5c23080e296bbe846f4ed2d01d7b595d.html  dir_5c23080e296bbe846f4ed2d01d7b595d.js  dir_b565d458ba0ce2faccd0ea2cd60c04eb.html  dir_b565d458ba0ce2faccd0ea2cd60c04eb.js  dir_db3a54907829b36871118d03417739cd.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_vars.html  game_8cpp.html  game_8cpp.js  game_8h.html  game_8h.js  game_8h_source.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  (+12 more)
reports/: CSAD task3 Moh v18 .docx  Report task2 Moh v18.docx  Report task3 Moh v18 .docx  Report task4 Moh v18.docx  Report task5 Moh v18.docx
server/: CMakeLists.txt  server.ino
server/include/: server.h
server/server2.0/: server2.0.ino
server/src/: main.cpp  server.cpp
server/tests/: test.cpp
(+34 files in other folders)
